<resources>
    <string name="app_name">CaloCare</string>
    <string name="title_home">Home</string>
    <string name="title_add_food">Add Food</string>
    <string name="title_chatbot">Chatbot</string>
    <string name="title_settings">Settings</string>
    <string name="date">Date</string>
    <string name="calocare">CaloCare</string>
    <string name="choose_your_type_of_food">Choose Your Type of Food</string>
    <string name="dishes">Dishes</string>
    <string name="package_foods">Package\n Foods</string>
    <string name="enable_dark_mode">Dark Mode</string>
    <string name="dark_mode">Enable Dark Mode</string>
    <string name="hello_blank_fragment">hello blank fragment</string>
    <string name="opening_chatbot">Welcome to CaloCare Chatbot!\nWe’re here to help you track your food intake and answer any questions you have about nutrition and healthy eating.</string>
    <string name="typing">Type here...</string>
    <string name="enter_your_food_details">Enter Your Food Details</string>
    <string name="food_name">Food name</string>
    <string name="carbohydrate">Carbohydrate</string>
    <string name="protein">Protein</string>
    <string name="fat">Fat</string>
    <string name="calories">Calories</string>
    <string name="calculate">Calculate</string>
    <string name="ask_with_chatbot">Ask with chatbot about your results!</string>
    <string name="result">Result</string>
    <string name="results_from_chatbot">Results from Chatbot</string>
    <string name="based_on_the_information_you_entered">Based on the information you entered...</string>
    <string name="test">test</string>
    <string name="test2">test2</string>
    <string name="food_tracker">Food Tracker</string>
    <string name="foods_eaten">5 Foods Eaten</string>
    <string name="capture_your_food_and_lets_start_to_track_your_consumption">Capture your food and lets start to track your consumption</string>
    <string name="pick_from_gallery">Pick from Gallery</string>
    <string name="capture_from_camera">Capture from camera</string>
    <string name="media_chooser">Media Chooser</string>
    <string name="analyze_food">Analyze Food</string>
    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="tflite_is_not_initialized_yet">TfLite is not initialized yet</string>
    <string name="no_tflite_interpreter_loaded">No TFLite interpreter loaded</string>
    <string name="food_details">Food Details</string>
    <string name="carbohydrate_in_result">Carbohydrate:</string>
    <string name="protein_in_result">Protein:</string>
    <string name="fat_in_result">Fat:</string>
    <string name="calories_in_result">Calories:</string>
    <string name="based_on_your_food_details_you_have">Based on your food details, you have</string>
    <string name="image_classifier_not_initialized">Image Classifier not Initialized</string>
    <string name="classification_failed">Classification Failed</string>
    <string name="image_classification_failed">Image Classification Failed</string>
    <string name="notifications">Notifications</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="total_nutrition">Total Nutrition:</string>
    <string name="evaluation">Evaluation:</string>
    <string name="delete">Delete</string>
    <string name="enter_food_name">Enter Food Name</string>
    <string name="enter_carbohydrates_g">Enter carbohydrates (g)</string>
    <string name="enter_protein_g">Enter protein (g)</string>
    <string name="enter_fat_g">Enter fat (g)</string>
    <string name="enter_calories_kcal">Enter calories (kcal)</string>
    <string name="calculate_nutrition">CALCULATE NUTRITION</string>
</resources>