<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="16dp"
    app:cardElevation="8dp"
    app:strokeColor="@color/lemon_chiffon"
    app:strokeWidth="2dp"
    android:layout_margin="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <!-- Food Name -->
        <TextView
            android:id="@+id/textViewFoodName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/food_name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="@font/opensans_variablefont_wdth_wght"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/textViewResult"
            app:layout_constraintHorizontal_bias="0"
            tools:text="Grilled Chicken" />

        <!-- Calories -->
        <TextView
            android:id="@+id/textViewCalories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calories"
            android:fontFamily="@font/opensans_variablefont_wdth_wght"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@id/textViewFoodName"
            app:layout_constraintTop_toBottomOf="@id/textViewFoodName"
            tools:text="320 Calories" />

        <!-- Result -->
        <TextView
            android:id="@+id/textViewResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:fontFamily="@font/opensans_variablefont_wdth_wght"
            android:gravity="end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Not bad for you!" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>