<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".ui.media_chooser.MediaChooserFragment">

    <!-- Orange Container -->
    <androidx.cardview.widget.CardView
        android:id="@+id/formCardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardBackgroundColor="?attr/colorPrimaryVariant"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardElevation="8dp"
        app:contentPadding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <!-- Title -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="24dp"
                android:fontFamily="@font/opensans_variablefont_wdth_wght"
                android:gravity="center"
                android:text="@string/capture_your_food_and_lets_start_to_track_your_consumption"
                android:textColor="?android:textColorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <!-- Options Container -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:weightSum="2">

                <!-- Gallery Option -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/imageButton_gallery"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_marginBottom="8dp"
                        android:src="@drawable/ic_gallery_fill_64" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pick_from_gallery"
                        android:textColor="?android:textColorPrimary"
                        android:textSize="14sp" />
                </LinearLayout>

                <!-- Divider -->
                <View
                    android:id="@+id/divider"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="8dp"
                    android:background="@color/tumbleweed" />

                <!-- Camera Option -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/imageButton_camera"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_marginBottom="8dp"
                        android:src="@drawable/ic_camera_fill_64" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/capture_from_camera"
                        android:textColor="?android:textColorPrimary"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>

            <!-- Preview ImageView -->
            <ImageView
                android:id="@+id/previewImageView"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="16dp"
                android:scaleType="centerCrop"
                android:src="@android:drawable/ic_menu_gallery"
                tools:src="@android:drawable/ic_menu_gallery" />

            <Button
                android:id="@+id/analyzeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/analyze_food"
                android:textColor="@color/black"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
