<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Date Navigation -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btn_date_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_arrow_left_24"
                    app:tint="?android:textColorPrimary" />

                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/opensans_variablefont_wdth_wght"
                    android:gravity="center"
                    android:text="@string/date"
                    android:textColor="?android:textColorPrimary" />

                <ImageButton
                    android:id="@+id/btn_date_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_arrow_right_24"
                    app:tint="?android:textColorPrimary" />
            </LinearLayout>

            <!-- Card for Tracking -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cardview_tracker"
                android:layout_width="match_parent"
                android:layout_height="235dp"
                android:layout_marginTop="16dp"
                app:cardBackgroundColor="?attr/colorPrimaryVariant"
                app:cardCornerRadius="12dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/opensans_variablefont_wdth_wght"
                        android:gravity="center"
                        android:text="@string/food_tracker"
                        android:textColor="?android:textColorPrimary"
                        android:textSize="20sp" />

                    <!-- Circular Progress Bar -->
                    <com.dicoding.calocare.canvas.CalorieDiagramView
                        android:layout_width="300dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="20dp"
                        android:layout_gravity="center" />

                    <TextView
                        android:id="@+id/tv_calories"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1200 / 2000 Calories Consumed"
                        android:textColor="?android:textColorPrimary"
                        android:textSize="16sp" />



                    <TextView
                        android:id="@+id/tv_food_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/foods_eaten"
                        android:textColor="?android:textColorPrimary"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Dishes Section -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cardview_dishes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:cardBackgroundColor="?attr/colorPrimaryVariant"
                app:cardCornerRadius="12dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/opensans_variablefont_wdth_wght"
                        android:paddingBottom="8dp"
                        android:text="@string/dishes"
                        android:textColor="?android:textColorPrimary"
                        android:textSize="20sp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/dishesRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:nestedScrollingEnabled="false"
                        android:orientation="horizontal"
                        tools:listitem="@layout/item_food" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Packaged Foods Section -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cardview_package_food"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:cardBackgroundColor="?attr/colorPrimaryVariant"
                app:cardCornerRadius="12dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/opensans_variablefont_wdth_wght"
                        android:paddingBottom="8dp"
                        android:text="@string/package_foods"
                        android:textColor="?android:textColorPrimary"
                        android:textSize="20sp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/packageFoodRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:nestedScrollingEnabled="false"
                        tools:listitem="@layout/item_food" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>